# WasteSPP

./: .gitmodules  README.md  docker-compose.yaml  license.txt  run.sh
ComponentAnnotator/: README.md  pyproject.toml
ComponentAnnotator/data/arcan-log/arcanOutput/pumpernickel/: component-metrics.csv  dependency-graph-1_aa275b4336dbcca60ec26960d59ff0875bddce05.graphml
ComponentAnnotator/docker/: Dockerfile
ComponentAnnotator/src/: https __wasteservice.github.io_.htm  main.py  projects.pkl
ComponentAnnotator/src/arcan/: filters.yaml  run-arcan.sh
ComponentAnnotator/src/componentaggregator/: componentaggregator.py
ComponentAnnotator/src/componentannotator/: componentannotator.py
ComponentAnnotator/src/componentextractor/: arcan.sh  componentextractor.py
ComponentAnnotator/src/projectextractor/: projectextractor.py
ComponentAnnotator/test/test_componentaggregator/: test_componentaggregator.py
ComponentAnnotator/test/test_componentannotator/: test_componentannotator.py
ComponentAnnotator/test/test_componentextractor/: test_componentextractor.py
ComponentAnnotator/test/test_projectextractor/: test_projectextractor.py
Monitor/src/projectextractor/: projectextractor.py
